@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-26T16:33:57Z",
-  "count_outdated" : 261,
-  "uniques_outdated" : 127,
-  "count" : 288,
+  "timestamp" : "2022-07-27T02:27:32Z",
+  "count_outdated" : 263,
+  "uniques_outdated" : 128,
+  "count" : 290,
   "uniques" : 144,
   "clones" : [
-    {
-      "timestamp": "2022-07-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-13T00:00:00Z",
       "count": 1,
@@ -84,8 +77,8 @@
     },
     {
       "timestamp": "2022-07-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
